# PyPass

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  authentification.py  authentifictaion.py  character_map.py  charecter_map.py  generate_password.py  input.py  main.py  manage_passwords.py  password_utils.py  pyproject.toml
pypass/: __init__.py  auth.py  characters.py  cli.py  generator.py  hashing.py  storage.py
